# birch

./: .gitignore  ARCHITECTURE.md  CLI_DASHBOARD_INTEGRATION.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  PLAN.md  QUICK_FIX.md  README.md  build.sh  dev.ts  env.example  package.json
.github/workflows/: ci.yml
apps/api/: Cargo.toml  Dockerfile  README.md
apps/cli/: Cargo.toml  auth_callback.rs  cli.rs  config.rs  lib.rs  main.rs  saas.rs
apps/docs/: package.json
apps/web/: .eslintrc.json  README.md  package.json  tailwind.config.js
docs/: README.md
docs/.source/: index.ts
examples/: README.md  app_signal_hook.rs
infra/examples/: README.md
services/api/: Cargo.toml
services/api/src/: lib.rs  main.rs
services/api/src/alerts/: channels.rs  manager.rs
services/api/src/api/: routes.rs
services/api/src/api/handlers/: providers.rs  workspaces.rs
services/api/src/approval/: mod.rs  system.rs
services/api/src/audit/: logger.rs  models.rs
services/api/src/auth/: api_keys.rs  jwt.rs  middleware.rs
services/api/src/credentials/: api_key.rs  cache.rs  circuit_breaker.rs  health.rs  kms.rs  oauth.rs  resolver.rs
services/api/src/enterprise/: keys.rs  sso.rs
services/api/src/metering/: counter.rs
services/api/src/orchestration/: connector.rs  rotation.rs
services/api/src/policy/: engine.rs  evaluator.rs  models.rs
services/api/src/supabase/: client.rs
services/web/: Dockerfile
src/: audit.rs  cli.rs  config.rs  daemon.rs  dev.rs  lock.rs  main.rs  rollback.rs  rotation.rs  signals.rs
supabase/migrations/: 20240101000000_initial_schema.sql  20240201000000_policies_table.sql  20240201000001_approval_requests_table.sql  20240201000002_audit_logs_table.sql
(+97 files in other folders)
